# MiniFT

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Procfile  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  .env.railway  .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt
backend/accounts/: auth.py  jwt.py  models.py  services.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/finances/: models.py  services.py  urls.py  views.py
backend/finances/migrations/: 0001_initial.py
backend/migrations/: 0001_initial.sql  0002_account_currencies_and_exchange_rates.sql  0003_backend_performance_indexes.sql  0004_exchange_rate_cache_metadata.sql  0005_refresh_sessions.sql
backend/minift/: settings.py  urls.py
backend/src/: config.rs  cors.rs  errors.rs  guards.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: accounts.rs  auth.rs  budgets.rs  exchange_rates.rs  health.rs  mod.rs  recurring.rs  transactions.rs  transfers.rs
backend/src/models/: account.rs  auth.rs  budget.rs  exchange_rate.rs  mod.rs  recurring.rs  transaction.rs  transfer.rs
backend/src/routes/: mod.rs
backend/src/schema/: account.rs  auth.rs  budget.rs  common.rs  exchange_rate.rs  mod.rs  recurring.rs  transaction.rs  transfer.rs
backend/src/services/: accounts.rs  auth.rs  budgets.rs  dev_seed.rs  exchange_rates.rs  mod.rs  recurring.rs  transactions.rs  transfers.rs
backend/tests/: accounts_integration.rs  transactions_integration.rs  transfers_integration.rs
backend/tests/common/: mod.rs
(+106 files in other folders)
