[package]
name = "minift-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

